--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
         "testcov": "jest --coverage",
         "test1": "jest src/01-getting-started",
         "test1cov": "jest src/01-getting-started --coverage",
-        "testfile": "jest src/01-getting-started/scripts/lfsplay.test.js"
-    },
+        "testfile": "jest src/01-getting-started/scripts/lfsplay.test.js",
+        "tk": "jest src/javascript/daily.test.js",
+        "tk1": "jest src/javascript/daily.test.js"
+        },
     "keywords": [],
     "author": "",
     "license": "ISC",
